--- a/complete/frontend/package.json
+++ b/complete/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.1",
     "auto": "^11.3.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
@@ -19,7 +20,8 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
