--- a/complete/backend/package.json
+++ b/complete/backend/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install"
   },
-  "keywords": ["feedback", "student", "admin", "mern"],
+  "keywords": [
+    "feedback",
+    "student",
+    "admin",
+    "mern"
+  ],
   "author": "PydahSoft",
   "license": "ISC",
   "dependencies": {
@@ -22,5 +28,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
