--- a/complete/frontend/package.json
+++ b/complete/frontend/package.json
@@ -13,10 +13,12 @@
     "@lottiefiles/dotlottie-react": "^0.17.1",
     "auto": "^11.3.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.460.0",
     "prefixer": "^0.0.3",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
