Dynamic Title Section & Clean Layout 📅 Professional Excel Styling with Merged Cells 🎨 Fuzzy Matching for Text Questions 🔍 Year-Semester Specific Sections 🎯

--- a/complete/backend/package.json
+++ b/complete/backend/package.json
@@ -24,7 +24,9 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "exceljs": "^4.3.0",
+    "fuzzball": "^2.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
