--- a/complete/frontend/package.json
+++ b/complete/frontend/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
